2004-01-16  Andrew Haley  <aph@redhat.com>

PR java/13273:
	* typeck.c (shallow_find_method): New.
	(find_method_in_superclasses): New.
	(find_method_in_interfaces): New.
	(lookup_do): Rewrite.
	* java-tree.h (SEARCH_ONLY_INTERFACE): Delete.

	* jcf-parse.c (read_class): Save and restore output_class.
	* decl.c (java_expand_body): Set output_class from fndecl.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@75980 138bc75d-0d04-0410-961f-82ee72b054a4